--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -10,6 +10,7 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/ic_logo_movie" />
+        android:src="@drawable/ic_logo_movie"
+        android:contentDescription="@string/image_logo" />
 
 </RelativeLayout>
