--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,5 +6,7 @@
         <item name="android:statusBarColor">@color/primary_color</item>
     </style>
 
-    <style name="Theme.LocalMovieApplication" parent="Base.Theme.LocalMovieApplication" />
+    <style name="Theme.LocalMovieApplication" parent="Base.Theme.LocalMovieApplication" >
+        <item name="android:background">@color/primary_color</item>
+    </style>
 </resources>
